--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.7",
     "popper.js": "^1.16.1",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.1"
