--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "stop": "taskkill -f -im node.exe"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
@@ -17,6 +18,10 @@
     "nodemon": "^2.0.7",
     "popper.js": "^1.16.1",
     "sqlite": "^4.0.19",
-    "sqlite3": "^5.0.1"
+    "sqlite3": "^5.0.1",
+    "taskkill": "^3.1.0"
+  },
+  "devDependencies": {
+    "kill-port": "^1.6.1"
   }
 }
