--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "stop": "taskkill -f -im node.exe"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
